# netvigil

./: .env.example  .gitignore  CLAUDE.md  Caddyfile  Dockerfile  README.md  docker-compose.yml  eslint.config.js  package.json  pnpm-lock.yaml  railway.toml  tsconfig.base.json  vercel.json
.github/workflows/: ci.yml
docs/: architecture.md  openapi.yaml
docs/adr/: 0001-monorepo-and-package-managers.md  0002-argon2id-password-hashing.md  0003-rs256-jwt-with-refresh-rotation.md  0004-api-proxied-google-oauth-mobile.md  0005-asyncpg-rls-transaction-wrapper.md  0006-geolocation-geoip2-ipinfo-fallback.md
scripts/: gen_jwt_keys.py  seed_pipeline.py
services/api/: .env.example  Dockerfile  alembic.ini  pyproject.toml  railway.toml
services/api/migrations/: env.py
services/api/migrations/versions/: 0001_initial_schema.py  0002_add_expo_push_token.py  0002_auth_extensions.py  0003_mfa_google_columns.py  0004_rbac_and_audit.py  0005_user_status_and_super_admin.py  0006_profile_fields.py
services/api/src/aankhanet_api/: audit.py  config.py  database.py  deps.py  geo.py  main.py  permissions.py  security.py
services/api/src/aankhanet_api/repositories/: alert_rules.py  auth.py  devices.py  incidents.py
services/api/src/aankhanet_api/routers/: admin.py  alert_rules.py  audit_logs.py  auth.py  dashboard.py  devices.py  geo.py  health.py  incidents.py  seed.py  users.py
services/api/src/aankhanet_api/schemas/: alert_rules.py  auth.py  base.py  dashboard.py  devices.py  incidents.py  users.py
services/api/src/netvigil_api/: audit.py  config.py  database.py  deps.py  main.py  permissions.py  security.py
services/api/src/netvigil_api/repositories/: alert_rules.py  auth.py  devices.py  incidents.py
services/api/src/netvigil_api/routers/: admin.py  alert_rules.py  audit_logs.py  auth.py  dashboard.py  devices.py  incidents.py  seed.py  users.py
services/api/src/netvigil_api/schemas/: alert_rules.py  auth.py  dashboard.py  devices.py  incidents.py  users.py
services/api/tests/: conftest.py  test_auth.py  test_auth_google.py  test_auth_mfa.py  test_dashboard.py  test_devices.py  test_incidents.py  test_rbac.py
services/detector/: Dockerfile  pyproject.toml  railway.toml
services/detector/models/: .gitignore  autoencoder.pt  isolation_forest.pkl  scaler.pkl  xgboost.pkl
services/detector/scripts/: train_cicids.py
services/detector/src/aankhanet_detector/: config.py  ensemble.py  main.py  mitre.py  narrative.py  writer.py
services/detector/src/netvigil_detector/: config.py  ensemble.py  features.py  main.py  narrative.py  writer.py
services/detector/tests/: test_ensemble.py  test_features.py  test_main.py  test_mitre.py  test_narrative.py
services/dispatcher/: Dockerfile  pyproject.toml  railway.toml
services/dispatcher/src/aankhanet_dispatcher/: config.py  evaluator.py  main.py
services/dispatcher/src/aankhanet_dispatcher/channels/: email.py  push.py  sms.py
services/dispatcher/src/netvigil_dispatcher/: config.py  main.py
services/dispatcher/src/netvigil_dispatcher/channels/: email.py  push.py  sms.py
services/dispatcher/tests/: test_channels.py  test_evaluator.py
services/ingestor/: Dockerfile  pyproject.toml
services/ingestor/src/aankhanet_ingestor/: config.py  kafka_producer.py  main.py
services/ingestor/src/aankhanet_ingestor/collectors/: netflow.py  pcap.py  syslog.py
services/ingestor/src/netvigil_ingestor/: config.py  kafka_producer.py  main.py
services/ingestor/src/netvigil_ingestor/collectors/: netflow.py  pcap.py  syslog.py
services/ingestor/tests/: test_netflow.py  test_syslog.py
