[project]
name = "aankhanet-detector"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "scikit-learn>=1.5.0",
    "torch>=2.3.0",
    "xgboost>=2.0.0",
    "aiokafka>=0.11.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "anthropic>=0.28.0",
    "influxdb-client[async]>=1.44.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "S", "B", "A", "C4", "PT", "RET", "SIM"]
ignore = ["S101"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=70"
